                  Fri Mar 18 02:47:46 UTC 2011


Directory .
 Makefile.in               Locally Modified           62 

Directory debian
 control                   Locally Modified           62 
 leap.dirs                 Locally Removed            62 
 leap-11.03.dirs           Locally Added               0 
 leap-bin.dirs             Locally Added               - 
 changelog                 Locally Modified           62 
 rules                     Locally Modified           62 
 leap.postinst             Locally Removed            62 
 leap.preinst              Locally Removed            62 
 leap.postrm               Locally Removed            62 
 leap.prerm                Locally Removed            62 
 leap.docs                 Locally Removed            62 
 leap-bin.postinst         Locally Added               - 
 leap-bin.postrm           Locally Added               - 
 leap-bin.preinst          Locally Added               - 
 leap-bin.prerm            Locally Added               - 
 leap-bin.docs             Locally Added               - 

Directory .
 debian/                   Locally Modified           62 
 Makefile.am               Locally Modified           62 

Changes for building debian packages for release 11.03.

----------
jsemer      Date: Fri Mar 25 16:40:58 EDT 2011  CSN: CSN-leap-65
                  Fri Mar 25 20:40:58 UTC 2011


Directory debian
 changelog                 Locally Modified           64 

Update debian packaging to reflect start of work on release 11.04.

----------
mcadler     Date: Mon Apr  4 18:30:07 EDT 2011  CSN: CSN-leap-66
                  Mon Apr  4 22:30:07 UTC 2011


Directory modules/leap/build-support/project
 SCons.top.template        Locally Modified           65 

The updated m5 no longer appends python code to the end of the binary.  Instead,
code is stored in statically constructed arrays as the program starts.  The
build rules are thus simpler.